--- a/css/main.css
+++ b/css/main.css
@@ -14,5 +14,13 @@
     --text-watermark: #999999;
 }
 
-
+body {
+    color: --text-bolder;
+    font-size: 15px;
+    font-family: Karla,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 32px;
+    text-rendering: optimizeLegibility;
+}
 
