--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,8 @@
 @import "partials/reset";
 
+$font-family-main: Ubuntu, Geneva, Verdana, Tahoma, sans-serif;
+$font-family-title: 'Ubuntu Condensed', 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans Condensed', 'Helvetica Neue', 'Arial Narrow', Helvetica, Verdana, Arial, sans-serif;
+
 :root-colors{
     --button-primary-background: #5fa82f;
     --button-primary-font: #fff;
@@ -18,7 +21,7 @@
 body {
     color: --text-bolder;
     font-size: 15px;
-    font-family: Karla,sans-serif;
+    font-family: $font-family-main;
     font-weight: 400;
     font-style: normal;
     line-height: 32px;
