--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -3,7 +3,8 @@
 <title>{{ $.Site.Title }}</title>
 {{- $stylesheet := .Site.Data.webpack.main -}}
 {{- with $stylesheet.css }}
-<link href="{{ relURL . }}" rel="stylesheet">
+<link href="{{ relURL . }}" rel="stylesheet" media="screen">
+<link href="{{ relURL . }}" rel="stylesheet" media="print">
 {{- end }}
 {{- with $stylesheet.js }}
 <script type="module" src="{{ relURL . }}"></script>
