Création squelette Ecran login, inscription, mot de passe perdu et debut consomation + css + js inline

--- a/site/layouts/partials/bandeau.html
+++ b/site/layouts/partials/bandeau.html
@@ -1,5 +1,5 @@
 <nav id="bandeau">
-  <img src="/imgs/logo.svg" alt="Logo green lanterne">
+  <a href="/"><img src="/imgs/logo.svg" alt="Logo green lanterne"></a>
   <ul id="menu">
     <li>Ma consommation</li>
     <li>Mes documents</li>
