--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,9 +17,11 @@
     --text-hyperlink :#097dff;
     --text-watermark: #999999;
 
-    --bandeau-background: grey;
+    --bandeau-background: #58075C;
 }
-
+html {
+  height: 100%;
+}
 body {
     color: var(--text-bolder);
     font-size: 15px;
@@ -28,6 +30,9 @@ body {
     font-style: normal;
     line-height: 32px;
     text-rendering: optimizeLegibility;
+    height: 100%;
+    display : table;
+    	width: 100%;
 }
 
 #bandeau {
@@ -39,6 +44,7 @@ body {
     height:64px;
     margin-right:10px
 }
+#bandeau a, #bandeau a:visited, #bandeau a:hover{border:0px}
 #menu {display:none}
 #bandeau ul {list-style : none;}
 #bandeau li {
@@ -48,42 +54,86 @@ body {
     line-height: 56px;
     padding:4px;
     background-color: var(--button-secondary-background);
-
 }
-#bandeau li:hover {background-color: var(--button-primary-background)}
+
+#bandeau li:hover {
+    background-color: var(--button-primary-background);
+    cursor:pointer;
+}
 #bandeau span {
     line-height: 64px;
     position: absolute;
     right: 10px; color:white
 }
 h1 {
-    margin-top:1rem;
+    margin-top: 1rem;
     text-align: center;
     font-size: 2rem;
 }
-#login {
+.divMilieu {
+    position: fixed;
+    left: calc(49% - 10rem);
     border:1px solid var(--bandeau-background);;
-    width:33%;
+    width:20rem;
     margin:3rem auto;
     padding:20px;
-
+    transition: all 1s linear;
+    overflow:hidden;
 }
-#login input {
+.divGauche {
+    position: fixed;
+    left:-40%;
+    border:1px solid var(--bandeau-background);;
+    width:20rem;
+    margin:3rem auto;
+    padding:20px;
+    transition: all 1s linear;
+}
+.divDroite {
+    position: fixed;
+    left: 100%;
+    border:1px solid var(--bandeau-background);;
+    width:20rem;
+    margin:3rem auto;
+    padding:20px;
+    transition: all 1s linear;}
+.saisie {
     display:block;
     margin-bottom:1rem;
-    width:20rem;
+    width:17rem;
 }
-#login input[type=submit] {
+.buttonVert {
     background-color: var(--button-primary-background);
     border:0;
     padding: 8px;
-    margin:1rem;
-    width:10rem;
+    margin:2rem 2px;
+    width:8rem;
+    display: block;
+    cursor:pointer;
+}
+.gauche {
+float:left
+}
+.droite {
+float:right
 }
 footer {
-    background-color: var(--element-highlight);
-    bottom: 0px;
+    background-color: var(--bandeau-background);
+    height:1rem;
     width: 100%;
-    position: absolute;
+    display : table-row;
+    color:white;
 }
+a, a:visited{
+    color:black;
+    text-decoration:none;
+    border-bottom:1px solid var(--button-primary-background);
+}
+
+a:hover {
+    color:black;
+    text-decoration:none;
+    border-bottom:2px solid #9AF55D;
+}
+footer a, footer a:hover, footer a:visited {color:white}
 footer span {float:right; margin-right:10px}
