--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,7 +3,7 @@
 //$font-family-main: Ubuntu, Geneva, Verdana, Tahoma, sans-serif;
 //$font-family-title: 'Ubuntu Condensed', 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans Condensed', 'Helvetica Neue', 'Arial Narrow', Helvetica, Verdana, Arial, sans-serif;
 
-:root{
+:root {
     --button-primary-background: #5fa82f;
     --button-primary-font: #fff;
 
@@ -14,13 +14,13 @@
     --text-normal: #888;
     --text-bolder: #222;
 
-    --text-hyperlink :#097dff;
+    --text-hyperlink: #097dff;
     --text-watermark: #999999;
 
-    --bandeau-background: #58075C;
+    --bandeau-background: #58075c;
 }
 html {
-  height: 100%;
+    height: 100%;
 }
 body {
     color: var(--text-bolder);
@@ -31,39 +31,48 @@ body {
     line-height: 32px;
     text-rendering: optimizeLegibility;
     height: 100%;
-    display : table;
-    	width: 100%;
+    display: table;
+    width: 100%;
 }
 
 #bandeau {
-    background-color : var(--bandeau-background);
+    background-color: var(--bandeau-background);
     padding: 10px;
-    display : flex;
+    display: flex;
 }
 #bandeau img {
-    height:64px;
-    margin-right:10px
+    height: 64px;
+    margin-right: 10px;
 }
-#bandeau a, #bandeau a:visited, #bandeau a:hover{border:0px}
-#menu {display:none}
-#bandeau ul {list-style : none;}
+#bandeau a,
+#bandeau a:visited,
+#bandeau a:hover {
+    border: 0px;
+}
+#menu {
+    display: none;
+}
+#bandeau ul {
+    list-style: none;
+}
 #bandeau li {
     display: inline-block;
-	vertical-align: middle;
-    height:56px;
+    vertical-align: middle;
+    height: 56px;
     line-height: 56px;
-    padding:4px;
+    padding: 4px;
     background-color: var(--button-secondary-background);
 }
 
 #bandeau li:hover {
     background-color: var(--button-primary-background);
-    cursor:pointer;
+    cursor: pointer;
 }
 #bandeau span {
     line-height: 64px;
     position: absolute;
-    right: 10px; color:white
+    right: 10px;
+    color: white;
 }
 h1 {
     margin-top: 1rem;
@@ -73,67 +82,76 @@ h1 {
 .divMilieu {
     position: fixed;
     left: calc(49% - 10rem);
-    border:1px solid var(--bandeau-background);;
-    width:20rem;
-    margin:3rem auto;
-    padding:20px;
+    border: 1px solid var(--bandeau-background);
+    width: 20rem;
+    margin: 3rem auto;
+    padding: 20px;
     transition: all 1s linear;
-    overflow:hidden;
+    overflow: hidden;
 }
 .divGauche {
     position: fixed;
-    left:-40%;
-    border:1px solid var(--bandeau-background);;
-    width:20rem;
-    margin:3rem auto;
-    padding:20px;
+    left: -40%;
+    border: 1px solid var(--bandeau-background);
+    width: 20rem;
+    margin: 3rem auto;
+    padding: 20px;
     transition: all 1s linear;
 }
 .divDroite {
     position: fixed;
     left: 100%;
-    border:1px solid var(--bandeau-background);;
-    width:20rem;
-    margin:3rem auto;
-    padding:20px;
-    transition: all 1s linear;}
+    border: 1px solid var(--bandeau-background);
+    width: 20rem;
+    margin: 3rem auto;
+    padding: 20px;
+    transition: all 1s linear;
+}
 .saisie {
-    display:block;
-    margin-bottom:1rem;
-    width:17rem;
+    display: block;
+    margin-bottom: 1rem;
+    width: 17rem;
 }
 .buttonVert {
     background-color: var(--button-primary-background);
-    border:0;
+    border: 0;
     padding: 8px;
-    margin:2rem 2px;
-    width:8rem;
+    margin: 2rem 2px;
+    width: 8rem;
     display: block;
-    cursor:pointer;
+    cursor: pointer;
 }
 .gauche {
-float:left
+    float: left;
 }
 .droite {
-float:right
+    float: right;
 }
 footer {
     background-color: var(--bandeau-background);
-    height:1rem;
+    height: 1rem;
     width: 100%;
-    display : table-row;
-    color:white;
+    display: table-row;
+    color: white;
 }
-a, a:visited{
-    color:black;
-    text-decoration:none;
-    border-bottom:1px solid var(--button-primary-background);
+a,
+a:visited {
+    color: black;
+    text-decoration: none;
+    border-bottom: 1px solid var(--button-primary-background);
 }
 
 a:hover {
-    color:black;
-    text-decoration:none;
-    border-bottom:2px solid #9AF55D;
+    color: black;
+    text-decoration: none;
+    border-bottom: 2px solid #9af55d;
 }
-footer a, footer a:hover, footer a:visited {color:white}
-footer span {float:right; margin-right:10px}
+footer a,
+footer a:hover,
+footer a:visited {
+    color: white;
+}
+footer span {
+    float: right;
+    margin-right: 10px;
+}
