--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -114,10 +114,10 @@ h1 {
     transition: all 1s linear;
 }
 
-.saisie {
+.inputType {
     display: block;
     margin-bottom: 1rem;
-    width: 17rem;
+    width: 95%;
 }
 
 .greenButton {
