--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,22 @@
 @import "partials/reset";
 
+/*
+    couleur utilisé
+
+    vert foncé: #5fa82f
+    vert moyen: #6db33f
+    vert clair: #9af55d
+
+    bleu: #097dff
+
+    gris trés foncé: #222
+    gris clair: #e4e4e4
+
+
+
+*/
+
+
 :root {
     --button-primary-background: #5fa82f;
     --button-primary-font: #fff;
@@ -8,6 +25,7 @@
     --button-secondary-font: #222;
 
     --element-highlight: #6db33f;
+    --element-hover: #9af55d;
     --text-normal: #888;
     --text-bolder: #222;
 
@@ -37,7 +55,9 @@ body {
     display: table;
     width: 100%;
 }
-
+#menu {
+    display: none;
+}
 #bandeau {
     background-color: var(--bandeau-background);
     padding: 10px 10px 2px 10px;
@@ -52,9 +72,7 @@ body {
 #bandeau a:hover {
     border: 0px;
 }
-#bandeau ul {
-    list-style: none;
-}
+#bandeau ul {list-style: none;}
 #bandeau li {
     display: inline-block;
     vertical-align: middle;
@@ -77,11 +95,6 @@ body {
     color: white;
 }
 
-h1 {
-    margin-top: 1rem;
-    text-align: center;
-    font-size: 2rem;
-}
 
 .divMilieu {
     position: fixed;
@@ -90,7 +103,7 @@ h1 {
     width: 20rem;
     margin: 3rem auto;
     padding: 20px;
-    transition: all 1s linear;
+    transition: all 0.8s linear;
     overflow: hidden;
 }
 
@@ -101,7 +114,7 @@ h1 {
     width: 20rem;
     margin: 3rem auto;
     padding: 20px;
-    transition: all 1s linear;
+    transition: all 0.8s linear;
 }
 
 .divDroite {
@@ -111,7 +124,7 @@ h1 {
     width: 20rem;
     margin: 3rem auto;
     padding: 20px;
-    transition: all 1s linear;
+    transition: all 0.8s linear;
 }
 
 .inputType {
@@ -140,7 +153,7 @@ h1 {
 .droite {
     float: right;
 }
-
+.milieu { width:60%; margin:3rem auto}
 footer {
     background-color: var(--bottom-menu-background);
     height: 1rem;
@@ -149,6 +162,29 @@ footer {
     color: white;
 }
 
+#listfiles {
+    margin-top:2rem;
+    width:85%;
+    margin:auto
+}
+.file {
+    padding: 8px;
+    display:flex
+}
+.file img {height:48px}
+.file span {padding:8px}
+.file span{width:100%}
+.file span:last-child {width:4rem}
+.file:hover {
+    background-color:var(--element-hover);
+    cursor:pointer;
+}
+h1 {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 2rem;
+
+}
 a,
 a:visited {
     color: black;
@@ -159,7 +195,7 @@ a:visited {
 a:hover {
     color: black;
     text-decoration: none;
-    border-bottom: 2px solid #9af55d;
+    border-bottom: 2px solid var(--element-hover);
 }
 
 footer a,
