--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,5 @@
 @import "partials/reset";
+@import "partials/inputs";
 
 /*
     couleur utilisé
@@ -207,4 +208,15 @@ footer a:visited {
 footer span {
     float: right;
     margin-right: 10px;
+}
+.float-right{
+    float: right;
+}
+
+.float-left{
+    float: left;
+}
+
+.text-right{
+    text-align:right;
 }
