--- a/src/css/partials/_inputs.scss
+++ b/src/css/partials/_inputs.scss
@@ -1,9 +1,10 @@
  /* The switch - the box around the slider */
- .switch {
+ .switch label{
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
+    margin-right: 10px
   }
 
   /* Hide default HTML checkbox */
