--- a/site/layouts/partials/bandeau.html
+++ b/site/layouts/partials/bandeau.html
@@ -1,10 +1,10 @@
 <nav id="bandeau">
   <a href="/"><img src="/imgs/logo.svg" alt="Logo green lanterne"></a>
   <ul id="menu">
-    <li>Ma consommation</li>
-    <li>Mes documents</li>
-    <li>Comparer mon logement</li>
-    <li>Nos conseils</li>
+    <li onclick="document.location='/consomation'">Ma consommation</li>
+    <li onclick="document.location='/documents'">Mes documents</li>
+    <li onclick="document.location='/compare'">Comparer mon logement</li>
+    <li onclick="document.location='/conseils'">Nos conseils</li>
   </ul>
   <span id="utilisateur"></span>
 </nav>
