check user to show menu + consomation screen

--- a/site/layouts/partials/bandeau.html
+++ b/site/layouts/partials/bandeau.html
@@ -6,5 +6,6 @@
     <li onclick="document.location='/compare'">Comparer mon logement</li>
     <li onclick="document.location='/conseils'">Nos conseils</li>
   </ul>
+  <img id="power" src="/imgs/power-button-svgrepo-com.svg" alt="deconnexion" onclick="logout()">
   <span id="utilisateur"></span>
 </nav>
