--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   <head>
     {{- partial "head.html" . -}}
   </head>
-  <body>
+  <body onload="checkUser()">
     <header>
       {{- partial "bandeau.html" . -}}
     </header>
