--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -109,10 +109,10 @@ body {
 }
 .divMilieu {
     position: absolute;
-    left: calc(50% - 10rem);
+    left: calc(49% - 10rem);
     border: 1px solid var(--bandeau-background);
     width: 20rem;
-    margin: 3rem auto;
+    margin: 1rem auto 3rem auto;
     padding: 20px;
     transition: all 0.8s linear;
     overflow: hidden;
@@ -195,10 +195,12 @@ body {
 }
 footer {
     background-color: var(--bottom-menu-background);
-    height: 1rem;
+    height: 2rem;
     width: 100%;
     display: table-row;
     color: white;
+    position: fixed;
+    bottom: 0;
 }
 
 #listfiles {
@@ -228,7 +230,7 @@ footer {
     cursor: pointer;
 }
 h1 {
-    margin: 3rem 0 4rem 0;
+    margin: 3rem 0 1rem 0;
     text-align: center;
     font-size: 2rem;
 }
