--- a/site/layouts/partials/bandeau.html
+++ b/site/layouts/partials/bandeau.html
@@ -1,7 +1,7 @@
 <nav id="bandeau">
   <a href="/"><img src="/imgs/logo.svg" alt="Logo green lanterne"></a>
   <ul id="menu">
-    <li onclick="document.location='/consomation'">Ma consommation</li>
+    <li onclick="document.location='/consommation'">Ma consommation</li>
     <li onclick="document.location='/documents'">Mes documents</li>
     <li onclick="document.location='/compare'">Comparer mon logement</li>
     <li onclick="document.location='/conseils'">Nos conseils</li>
